fixed chat layout on mobile

--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -110,6 +110,7 @@
 	top: 20px;
 	left: 10px;
 	transition: width 0.3s;
+	z-index: 11;
 	width: 46px;
 
 	.button-text {
